tests/cases/fail/class_method_missing_self.p4
class Point:
    x: int
    y: int

    def sum() -> int:
        return 0

def main() -> None:
    p: Point = Point(1, 2)
    print(p.x)
